# cpp-template

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
app/: main.cpp
docs/: CMakeLists.txt
test/: CMakeLists.txt
test/src/: greeter.cpp  main.cpp
